tests/baselines/reference/relativeNamesInClassicResolution.errors.txt
tests/cases/compiler/somefolder/a.ts(1,17): error TS5084: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/somefolder/a.ts (1 errors) ====
    import {x} from "./b"
                    ~~~~~
!!! error TS5084: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
==== tests/cases/compiler/b.ts (0 errors) ====
    export let x = 1;